fixtures/invalid/field_overlap.latch
-- @reg offset=0x08 name=status
-- @field bits=0:3 name=mode access=RW
-- @field bits=2:5 name=flags access=RO
